<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".ExerciseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#84FFFF"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/llRestViewTimer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below = "@+id/my_toolbar"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_ready_for"
            android:textColor="@color/colorAccentGreen"
            android:textSize="22sp"
            android:textStyle="bold"/>


        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_circular_color_accent_border">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_progress_gray"
                android:indeterminate="false"
                android:max="10"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90" />

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_color_accent_background"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:text="@string/Seconds"/>

            </LinearLayout>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/upcoming_exercise"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvUpcomingExerciseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#212121"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/exercise_name" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llExerciseTimer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below = "@+id/my_toolbar"
        android:layout_above="@+id/rvExerciseStatus"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

<!--         Fit image height to screen
              Add Default Image-->
        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:layout_weight="1"
            android:contentDescription="@string/exercises_image"
            android:src="@drawable/ic_jumping_jacks"
        />

        <TextView
            android:id="@+id/tvExerciseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_name"
            android:textColor="@color/colorAccentGreen"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_circular_color_accent_border">

            <ProgressBar
                android:id="@+id/progressBarExercise"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_progress_gray"
                android:indeterminate="false"
                android:max="30"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90" />

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_color_accent_background"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvExerciseTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:text="@string/_30"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExerciseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>


</RelativeLayout>